# serializer version: 1
# name: test_coordinator_update
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '1',
      'FeedName': 'parameter 1',
      'LastUpdated': 1665509570,
      'LastUpdatedStr': '2022-10-11T10:32:50-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.04',
  })
# ---
# name: test_coordinator_update.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'FeedId': '1',
      'FeedName': 'parameter 1',
      'LastUpdated': 1665509670,
      'LastUpdatedStr': '2022-10-11T10:34:30-07:00',
      'Size': '35809224',
      'Tag': 'tag',
      'UserId': '1',
      'device_class': 'temperature',
      'friendly_name': 'emoncms@1.1.1.1 parameter 1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.emoncms_1_1_1_1_parameter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.04',
  })
# ---
